fix: more plugin friendly